--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    box-sizing: border-box;
+}
+html{
+    font-size:16px;
+}
+body{
+    margin:0;
+    font-family:quicksand, Helvetica, sans-serif;
+    font-size:18px;
+    /* background-color: rgb(29, 8, 13); */
+}
+a{
+    text-decoration:none;
+}
